clean up history

--- a/Core.Models.Manager.csproj
+++ b/Core.Models.Manager.csproj
@@ -1,9 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
+	
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+	<RootNamespace>Code.Models.Manager</RootNamespace>
+	<PackageId>Core.Models.Manager</PackageId>
+	<PackageVersion>1.0.0</PackageVersion>
+	<Version>1.0.0</Version>
+	<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+	<Authors>Lucas Gabriel Catullo</Authors>
   </PropertyGroup>
 
   <ItemGroup>
